# organic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .the_holy_commands.txt  LICENSE  README.md  mkdocs.yml  organicEnv.yml  pyproject.toml  requirements.txt  ruff.toml
docs/: index.md
docs/source/: conf.py  index.rst  organic.auxiliary.SelectData.rst  organic.auxiliary.post_organic.rst  organic.auxiliary.rst  organic.organic.rst  organic.post_organic.post_organic.rst  organic.post_organic.rst  organic.rst
docs/stylesheets/: custom_style.css
examples/: img_rec_example.py  train_gan_example.py
notebooks/: test.ipynb
notebooks/examples/data/: data_loader.ipynb
notebooks/experiments/: calculate_observables.ipynb  data_loader.ipynb
organic/: organic.py  post_organic.py
organic/auxiliary/: ReadOIFITS.py  SelectData.py  __init__.py  post_organic.py  post_organic_dev_akke.py  post_post_organic_akke.py
organic/post_organic/: post_organic.py
src/organic/: __init__.py  _consts.py  _utils.py  data_loader.py  oi_data.py  organic.py  sparco.py
theGANextended2/: FunctionLibrary.py  function_library.py
