[build-system]
requires = ["flit_core>=3.4", "astropy", "matplotlib", "numpy", "scikit-learn", "scipy", "tensorflow"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "organic"  # import name of the module for flit build tool

[project]
name = "organic-oi"  # distribution name on pypi package index
version = "0.0.3"
authors = [ 
  { name="Jacques Kluska"},
  { name="Rik Claes"}, 
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
maintainers = [
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
description = 'A package for image reconstuction from optical interferometry data using GANs.'
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "astropy",
  "matplotlib",
  "numpy",
  "scikit-learn",
  "scipy",
  "tensorflow",
]

[project.urls]
Homepage = "https://github.com/DePrinsT/organic"
Repository = "https://github.com/DePrinsT/organic"
Documentation = "https://organic.readthedocs.io/en/latest/"
Issues = "https://github.com/DePrinsT/organic/issues"

