[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# --- PROJECT AND BUILD INFORMATION ---

[project]
name = "organic-imgrec"  # distribution name on pypi package index
dynamic = ["version"]  # dynamics are resolved at build time by build system
authors = [ 
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
maintainers = [
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
description = 'A package for image reconstuction in astronomical optical interferometry using generative adversarial networks.'
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

# general PyPI dependencies required for package installation
dependencies = [
  "jax",
  "equinox",
  "numpy",
  "astropy",
  "matplotlib",
  "jaxtyping",
  "albumentationsx[headless]",
]

# optional dependencies, including for GPU support, development, etc.
[project.optional-dependencies]
cuda = [
  "jax[cuda13]", 
]
dev = [
  "pre-commit",  # pre-commit hooks for linting
  "pytest",  # testing
  "jupyterlab",  # notebook support
  "ipykernel",
  "ipympl",  # interactive plots in notebooks (widget backend)
]
docs = [
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
]

# project URLs -> these will appear in project links section on PyPI
[project.urls]
Homepage = "https://github.com/DePrinsT/organic"
Repository = "https://github.com/DePrinsT/organic"
Documentation = "https://organic.readthedocs.io/en/latest/"
Issues = "https://github.com/DePrinsT/organic/issues"

[tool.hatch.build.targets.wheel]
# be explicit about which dir to package
# this is needed because the project name does not match the package name
packages = ["src/organic"]

[tool.hatch.version]
path = "src/organic/__init__.py"  # read in package version from source code

# --- DEV TOOLING ---

[tool.pyright]
include = ["src", "tests"]
reportFunctionMemberAccess = true  # report when trying to manipulate functions
reportIncompatibleMethodOverride = true  # report when overloaded signature doesn't match
reportIncompatibleVariableOverride = false # incompatible with eqx.AbstractVar

[tool.ruff]
extend-include = ["*.ipynb"]  # include Jupyter notebooks under ruff
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]  # rules the linter can fix with --fix argument
ignore = ["E731", "E741"]  # ignored rules
select = ["E", "F", "I001", "UP", "W"]  # selected rules

[tool.ruff.format]
quote-style = "double"  # double quotes for strings
indent-style = "space"  # use spaces for indenting
line-ending = "auto"  # automatically detect appropriate line ending
docstring-code-format = true  # auto-formatting of docstring code examples

# --- PIXI ENVIRONMENTS ---

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
organic-imgrec = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
cuda = { features = ["cuda"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]
