[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# --- PROJECT AND BUILD INFORMATION ---

[project]
name = "organic-imgrec"  # Distribution name on pypi package index.
# Dynamics are resolved at build time by build system.
dynamic = ["version"]  # 'version' is taken from the package's __init__.py
authors = [ 
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
maintainers = [
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
description = 'A package for image reconstuction in astronomical optical interferometry using generative adversarial networks.'
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

# General PyPI dependencies required for package installation.
dependencies = [
  "jax",
  "equinox",
  "numpy",
  "astropy",
  "matplotlib",
  "jaxtyping",
  "albumentationsx[headless]",
]

# Optional dependencies, including for GPU support, development, etc. .
[project.optional-dependencies]
cuda = [
  "jax[cuda13]",   # NIVIDA GPU-enabled version of JAX.
]
dev = [
  "pre-commit",  # Pre-commit hooks for linting.
  "pytest",  # Testing.
  "jupyterlab",  # Notebook support.
  "ipykernel",
  "ipympl",  # Interactive plots in notebooks (widget backend).
]
docs = [
  "mkdocs-material",  # mkdocs material theme.
  "mkdocs-ipynb",  # Including notebooks in mkdocs.
  "mkdocstrings",  # Docstrings for mkdocs.
  "mkdocstrings-python",  # Python docstring handler.
]

# Project URLs -> these will appear in project links section on PyPI.
[project.urls]
Homepage = "https://github.com/DePrinsT/organic"
Repository = "https://github.com/DePrinsT/organic"
Documentation = "https://organic.readthedocs.io/en/latest/"
Issues = "https://github.com/DePrinsT/organic/issues"

[tool.hatch.build.targets.wheel]
# Be explicit about which dir to package.
# This is needed because the project name does not match the python
# package name on disc.
packages = ["src/organic"]

[tool.hatch.version]
path = "src/organic/__init__.py"  # Read in package version from source code.

# --- DEV TOOLING ---

[tool.pyright]
include = ["src", "tests"]
reportFunctionMemberAccess = true  # Report when trying to manipulate functions.
reportIncompatibleMethodOverride = true  # Report when overloaded signature doesn't match.
reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar.

[tool.ruff]
extend-include = ["*.ipynb"]  # Include Jupyter notebooks under ruff's coverage.
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]  # Rules the linter can fix with --fix argument.
ignore = ["E731", "E741"]  # Ignored rules.
select = ["E", "F", "I001", "UP", "W"]  # Selected rules.

[tool.ruff.format]
quote-style = "double"  # Double quotes for strings.
indent-style = "space"  # Use spaces for indenting.
line-ending = "auto"  # Automatically detect appropriate line ending.
docstring-code-format = true  # Auto-formatting of docstring code examples.

# --- PIXI ENVIRONMENTS ---

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
organic-imgrec = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
cuda = { features = ["cuda"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[tool.pixi.tasks]
